--- a/processing_Functions.ipynb
+++ b/processing_Functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Functions used for pre-porcessing data"
+    "# Functions used for pre-processing MRI data"
    ]
   },
   {
